# TXSEX_MOCKBA3_6

./: .GITIGNORE  .agentignore  .gitignore  CMakeLists.txt  LICENSE  README.md  arm-linux-gnueabihf.cmake  deploy_force.sh  validate_xpm.py
.agent_bak/rules/: akai-force-limits.md  parameter-ranges.md
.cache/clangd/index/: RtMidi.cpp.FE1A01EE9BAD0CE0.idx  RtMidi.h.4BBDB270A1719C44.idx  main.cpp.2A4BA403A849E441.idx
AddOns/dxSex/: README.txt  dxsex  manage.sh  run_dxsex.sh
AddOns/txSex/: DEXED - Raspi.xpm  README.txt  TX-MIDI-PORT.txt  TX81z-txsyx.xpm  manage.sh  run_txsex.sh  txSex  txsex
src/: RtMidi.h  compile.sh  compile_mac.sh  main.cpp
